Explanation for the magnetic case is added

--- a/ms.tex
+++ b/ms.tex
@@ -353,10 +353,17 @@ where $ B_{\bot }$ is the interstellar magnetic field perpendicular to the stell
 In the case of the Solar wind, the kinetic energy is dominant input energy over the magnetic one (the former is $\sim 400$ times larger than the latter).  
 It is not clear from the observations of the Solar System planets which is the fundamental one, the correlation to the input kinetic energy, that to the magnetic energy, or both. 
 
-In this paper, we assume that the radio emission is scaled with the input kinetic energy, i.e., $P_{\rm radio} \propto P_{\rm k,\,inp}$. 
 
-Magnetic field of evolved stars are not well constrained \citep{konstantinova2010}. 
-If the correlation with input magnetic energy is the case, the radio emission would be rather weaker than the Jupiter, because the magnetic field of evolved stars 
+In this paper, we assume that the radio emission is scaled with the input kinetic energy, i.e., $P_{\rm radio} \propto P_{\rm k,\,inp}$, because as indicated earlier, the kinetic energy of the stellar wind of evolved stars are much larger than the main-sequence stars and thus may lead to brighter radio emission. 
+On the other hand, if the correlation with input magnetic energy is more fundamental, it is difficult to estimate the planetary radio emission at this point because magnetic field of evolved stars have not be well constrained for most of the highly evolved stars. 
+Recently there are some observations for M giants, which measured surface magnetic field $\sim 0.1-10 $G for a M-type star EK Boo  \citep{konstantinova2010}. In this particular case, given the large stellar radius $R_\star \sim 210 R_{\odot }$ the magnetic moment may be about $10^3$ times larger than the Sun and thus also may also increase the planetary radio emission. However, because of the lack of universal understanding of the stellar magnetic field, we leave the magnetic model of radio emission for evolved stars for future work. 
+
+
+the radio emission could be rather weaker than the Jupiter, 
+We note that, if the correlation with input magnetic energy is the case, the radio emission could be rather weaker than the Jupiter, because the magnetic field of evolved stars 
+
+ 
+
 
 The radius of the magnetic stand-off point, $r_s$, is obtained based on the balance between the stellar wind pressure and the planetary magnetic pressure: 
 %%%
