references for the canonical values of total power of Jovian auroral emission

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,102 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-01 18:47:54 +0900 
+%% Created for Yuka Fujii at 2015-06-02 17:22:10 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zarka_et_al2004,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2004JGRA..109.9S15Z},
+	Author = {{Zarka}, P. and {Cecconi}, B. and {Kurth}, W.~S.},
+	Date-Added = {2015-06-02 08:22:00 +0000},
+	Date-Modified = {2015-06-02 08:22:10 +0000},
+	Doi = {10.1029/2003JA010260},
+	Eid = {A09S15},
+	Journal = {Journal of Geophysical Research (Space Physics)},
+	Keywords = {Planetology: Solar System Objects: Jupiter, Radio Science: Radio astronomy, Radio Science: Instruments and techniques, Magnetospheric Physics: Planetary magnetospheres (5443, 5737, 6030), Electromagnetics: Antennas, Jupiter, magnetosphere, radio emissions, radioastronomy, absolute flux density measurements, Cassini mission},
+	Month = sep,
+	Pages = {9},
+	Title = {{Jupiter's low-frequency radio spectrum from Cassini/Radio and Plasma Wave Science (RPWS) absolute flux density measurements}},
+	Volume = 109,
+	Year = 2004,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1029/2003JA010260}}
+
+@article{konstantinova2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013BlgAJ..19...14K},
+	Author = {{Konstantinova-Antova}, R. and {Aur{\'{\i}}ere}, M. and {Charbonnel}, C. and {Wade}, G. and {Kolev}, D. and {Antov}, A. and {Tsvetkova}, S. and {Schr{\"o}der}, K.-P. and {Drake}, N.~A. and {Petit}, P. and {de Medeiros}, J.-R. and {L{\'e}bre}, A. and {Zhilyaev}, B. and {Verlyuk}, I. and {Svyatogorov}, O. and {Gershberg}, R.~E. and {Lovkaya}, M. and {Bogdanovski}, R. and {Stateva}, I. and {Cabanac}, R. and {Avgoloupis}, S. and {Contadakis}, M.~E. and {Seiradakis}, J.},
+	Date-Added = {2015-06-02 04:42:54 +0000},
+	Date-Modified = {2015-06-02 04:43:10 +0000},
+	Journal = {Bulgarian Astronomical Journal},
+	Keywords = {stars: late-type giants: stars, magnetic activity},
+	Pages = {14},
+	Title = {{Magnetic activity in stars on the giant branches: Twenty years of observations}},
+	Volume = 19,
+	Year = 2013}
+
+@inproceedings{petit2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013LNP...857..231P},
+	Archiveprefix = {arXiv},
+	Author = {{Petit}, P. and {Auri{\`e}re}, M. and {Konstantinova-Antova}, R. and {Morgenthaler}, A. and {Perrin}, G. and {Roudier}, T. and {Donati}, J.-F.},
+	Booktitle = {Lecture Notes in Physics, Berlin Springer Verlag},
+	Date-Added = {2015-06-02 04:42:27 +0000},
+	Date-Modified = {2015-06-02 04:42:34 +0000},
+	Doi = {10.1007/978-3-642-30648-8_9},
+	Editor = {{Rozelot}, J.-P. and {Neiner}, C.~(.},
+	Eprint = {1109.3979},
+	Keywords = {Physics},
+	Pages = {231},
+	Primaryclass = {astro-ph.SR},
+	Series = {Lecture Notes in Physics, Berlin Springer Verlag},
+	Title = {{Magnetic Fields and Convection in the Cool Supergiant Betelgeuse}},
+	Volume = 857,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-3-642-30648-8_9}}
+
+@article{tsvetkova2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...556A..43T},
+	Archiveprefix = {arXiv},
+	Author = {{Tsvetkova}, S. and {Petit}, P. and {Auri{\`e}re}, M. and {Konstantinova-Antova}, R. and {Wade}, G.~A. and {Charbonnel}, C. and {Decressin}, T. and {Bogdanovski}, R.},
+	Date-Added = {2015-06-02 04:36:30 +0000},
+	Date-Modified = {2015-06-02 04:36:38 +0000},
+	Doi = {10.1051/0004-6361/201321051},
+	Eid = {A43},
+	Eprint = {1301.1592},
+	Journal = {\aap},
+	Keywords = {stars: individual: Beta Ceti, stars: magnetic field, stars: activity, dynamo},
+	Month = aug,
+	Pages = {A43},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Magnetic field structure in single late-type giants: {$\beta$} Ceti in 2010-2012}},
+	Volume = 556,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201321051}}
+
+@article{auriere2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...574A..90A},
+	Archiveprefix = {arXiv},
+	Author = {{Auri{\`e}re}, M. and {Konstantinova-Antova}, R. and {Charbonnel}, C. and {Wade}, G.~A. and {Tsvetkova}, S. and {Petit}, P. and {Dintrans}, B. and {Drake}, N.~A. and {Decressin}, T. and {Lagarde}, N. and {Donati}, J.-F. and {Roudier}, T. and {Ligni{\`e}res}, F. and {Schr{\"o}der}, K.-P. and {Landstreet}, J.~D. and {L{\`e}bre}, A. and {Weiss}, W.~W. and {Zahn}, J.-P.},
+	Date-Added = {2015-06-02 04:33:44 +0000},
+	Date-Modified = {2015-06-02 04:33:51 +0000},
+	Doi = {10.1051/0004-6361/201424579},
+	Eid = {A90},
+	Eprint = {1411.6230},
+	Journal = {\aap},
+	Keywords = {stars: magnetic field, stars: late-type, stars: evolution, stars: rotation},
+	Month = feb,
+	Pages = {A90},
+	Primaryclass = {astro-ph.SR},
+	Title = {{The magnetic fields at the surface of active single G-K giants}},
+	Volume = 574,
+	Year = 2015,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201424579}}
 
 @article{joy2002,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
