--- a/ms.tex
+++ b/ms.tex
@@ -355,7 +355,7 @@ It is not clear from the observations of the Solar System planets which is the f
 
 
 In this paper, we assume that the radio emission is scaled with the input kinetic energy, i.e., $P_{\rm radio} \propto P_{\rm k,\,inp}$, because as indicated earlier, the kinetic energy of the stellar wind of evolved stars are much larger than the main-sequence stars and thus may lead to brighter radio emission. 
-On the other hand, if the correlation with input magnetic energy is more fundamental, it is difficult to estimate the planetary radio emission at this point because magnetic field of evolved stars have not be well constrained for most of the highly evolved stars. 
+On the other hand, if the correlation with input magnetic energy is more fundamental, it is difficult to estimate the planetary radio emission at this point because magnetic field of evolved stars have not be well constrained for most of the highly evolved stars \memoYF{Some observations: \citet[e.g.,][]{konstantinova2010,petit2013,tsvetkova2013,konstantinova2013,auriere2015}}. 
 Recently there are some observations for M giants, which measured surface magnetic field $\sim 0.1-10 $G for a M-type star EK Boo  \citep{konstantinova2010}. In this particular case, given the large stellar radius $R_\star \sim 210 R_{\odot }$ the magnetic moment may be about $10^3$ times larger than the Sun and thus also may also increase the planetary radio emission. However, because of the lack of universal understanding of the stellar magnetic field, we leave the magnetic model of radio emission for evolved stars for future work. 
 
 
@@ -656,7 +656,8 @@ F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyclotron}} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for canonical hot jupiters)} \notag 
 \end{eqnarray}
 %%%
-Here, we used $P_{\rm radio,\,J}=2.1\times 10^{11}\mbox{~W}$ \citep{griesmeier2007b} \memoYF{cite original paper!}. 
+The total power of Jovian auroral emission highly varies in time: $1.3\times 10^{10}$ W for the average, $3.2\times 10^{10}$ W for the average of highly active time, and $4.5 \times 10^{11}$ W for the peak activity \citep{zarka_et_al2004}. Here we employ $P_{\rm radio,\,J}=2.1\times 10^{11}\mbox{~W}$ as a canonical value, following \citet{griesmeier2005,griesmeier2007b}. 
+%\memoYF{cite original paper!}. 
 Therefore, RGHJs are expected to be intrinsically as bright as the closest hot Jupiters, and Jupiter-like planets around AGB stars are potentially orders-of-magnitude brighter than them. 
 
 However, observed energy flux is limited by the plasma cut-off frequency in the vicinity of the planets. 
